...
                      //Section largest texts
                      Padding(
                        padding: const EdgeInsets.all(16.0),
                        child: Column(
                          crossAxisAlignment: CrossAxisAlignment.start,
                          children: [
                            _titleDescriptions(context, title: "Temperament"),
                            const SizedBox(height: 10),
                            Text(
                              cat.temperament ?? "",
                              style: const TextStyle(fontSize: 16),
                              maxLines: 3,
                              overflow: TextOverflow.ellipsis,
                            ),
                            const SizedBox(height: 50),

                            //Description
                            _titleDescriptions(context, title: "Description"),
                            const SizedBox(height: 10),
                            Text(
                              cat.description ?? "",
                              style: const TextStyle(fontSize: 16),
                            ),
...
